--- a/setup.css
+++ b/setup.css
@@ -1,3 +1,52 @@
 body {
-    background-color: rgb(60,60,60);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: rgb(32,33,36);
+}
+
+.logo {
+    margin: 2vh 0;
+}
+
+.board {
+    margin: 14vh 0;
+    padding: 4vh;
+    width: 320px;
+    height: 320px;
+    border: 5px solid rgb(66, 133, 244);
+    border-radius: 25px;
+    filter: grayscale(0.2);
+}
+
+.menu-overlay {
+    position: fixed;
+    padding: 60px 30px;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.menu-btn {
+    background-color: rgb(66, 133, 244);
+    width: 60px;
+    height: 60px;
+    margin-top: 30px;
+    border-radius: 30px;
+}
+
+.menu-btn:first-child {
+    border: 4px solid rgb(66, 133, 244);
+    background-color: rgb(32,33,36);
+}
+
+.menu-btn:hover {
+    cursor: pointer;
+}
+
+footer {
+    position: absolute;
+    background-color: rgb(40,40,40);
+    min-height: 20vh;
+    bottom: 0;
 }
