--- a/setup.css
+++ b/setup.css
@@ -56,3 +56,18 @@ footer {
     bottom: 0;
     color: rgb(32,33,36);
 }
+
+.noselect { 
+    -webkit-touch-callout: none; 
+    /* iOS Safari */ 
+    -webkit-user-select: none; 
+    /* Chrome/Safari/Opera */ 
+    -khtml-user-select: none; 
+    /* Konqueror */ 
+    -moz-user-select: none; 
+    /* Firefox */ 
+    -ms-user-select: none; 
+    /* Internet Explorer/Edge */ 
+    user-select: none; 
+    /* Non-prefixed version, currently not supported by any browser */ 
+}
