--- a/setup.css
+++ b/setup.css
@@ -11,13 +11,34 @@ body {
 }
 
 .board {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: space-evenly;
     margin: 14vh 0;
-    padding: 4vh;
-    width: 320px;
-    height: 320px;
+    padding-top: 10px;
+    width: 336px;
+    height: 336px;
     border: 5px solid rgb(66, 133, 244);
     border-radius: 25px;
     filter: grayscale(0.2);
+}
+
+.field {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 95px;
+    width: 95px;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 15px;
+    font-size: 72px;
+}
+
+.field:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .menu-overlay {
