--- a/setup.css
+++ b/setup.css
@@ -75,6 +75,37 @@ button.menu-btn:focus {
     outline: 0;
 }
 
+.menu-player {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    left: 30px;
+    bottom: calc(48vh - 60px);
+    height: 120px;
+    width: 60px;
+    border-radius: 30px;
+    background-color: rgb(66, 133, 244);
+    border: 4px solid rgb(66, 133, 244);
+    z-index: 1;
+    filter: grayscale(0.2);
+}
+
+.player-btn {
+    color: rgb(32,33,36);
+    border: 4px solid rgb(66, 133, 244);
+    width: 56px;
+    height: 56px;
+    border-radius: 28px;
+    font-size: 28px;
+    filter: grayscale(0.2);
+}
+
+.player-btn.active {
+    background-color: rgb(32,33,36);
+    color: rgb(66, 133, 244);
+}
+
 footer {
     position: absolute;
     background-color: rgb(50,48,52);
